--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.19.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.175.0"
